<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="32sp"
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/login"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:background="@drawable/text_field_design"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_email_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/email"
            android:layout_marginLeft="4dp"
            android:textAllCaps="true"
            android:background="@drawable/custom_button1"
            android:hint="@string/email"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:background="@drawable/text_field_design"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_lock_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/password"
            android:textAllCaps="true"
            android:background="@drawable/custom_button1"
            android:hint="@string/pasword"
            android:layout_marginLeft="4dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/custom_button"
        android:text="@string/login_btn"
         />
    <Button
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/not_memeber_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16dp" />
</LinearLayout>

