<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="32sp"
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lato_black"
        android:text="@string/create_an_account"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/text_field_design"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_person_outline_black_24dp"/>
          <EditText
             android:layout_width="match_parent"
             android:layout_height="48dp"
              android:id="@+id/name"
              android:layout_marginLeft="4dp"
              android:singleLine="true"
              android:inputType="textCapWords"
              android:textAllCaps="true"
              android:background="@drawable/custom_button1"
              android:hint="@string/name"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/text_field_design"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="4dp"
                android:textAllCaps="true"
                android:background="@drawable/custom_button1"
                android:hint="@string/email"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/text_field_design"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_lock_black_24dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/password"
                android:textAllCaps="true"
                android:inputType="textPassword"
                android:singleLine="true"
                android:background="@drawable/custom_button1"
                android:hint="@string/pasword"
                android:layout_marginLeft="4dp"
                />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:layout_gravity="center_horizontal"
        >


        <View android:layout_height="0.4dp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:background="#bebebe"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:paddingLeft="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            />
        <View android:layout_height="0.4dp"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_marginTop="12dp"
            android:background="#bebebe"
            android:layout_marginRight="8dp"
            />
    </LinearLayout>


    <!-- Link to Login Screen -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16dp" />


</LinearLayout>